--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,15 @@ body{
 .greetings > span:nth-child(17){
     animation-delay: 3.2s;
 }
-
+.greetings > span:nth-child(18){
+    animation-delay: 3.4s;
+}
+.greetings > span:nth-child(19){
+    animation-delay: 3.6s;
+}
+.greetings > span:nth-child(20){
+    animation-delay: 3.8s;
+}
 
 
 .description{
